<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">매월 자동문자</string>
    <string name="edit_schedule_title">예약 추가/수정</string>
    <string name="add_schedule">예약 추가</string>
    <string name="empty_list_message">등록된 예약이 없습니다.\n오른쪽 아래 + 버튼으로 추가하세요.</string>

    <string name="hint_recipient_name">받는 사람 이름</string>
    <string name="hint_phone_number">전화번호</string>
    <string name="hint_message">메시지 내용</string>
    <string name="pick_contact">연락처</string>

    <string name="label_day_of_month">매월 발송 날짜</string>
    <string name="day_clamp_hint">선택한 날짜가 없는 달(예: 31일, 2월)에는 그 달의 마지막 날에 발송됩니다.</string>
    <string name="label_time">발송 시각</string>

    <string name="save">저장</string>
    <string name="delete">삭제</string>
</resources>
